--- a/style.css
+++ b/style.css
@@ -46,3 +46,71 @@ a html body{
 }
 
 /* ============= common css ================== */
+body {
+  background-color: var(--primary_background_color);
+}
+.container {
+  width: 1165px;
+  margin: 0 auto;
+}
+
+/* ============= navbar css start ================== */
+#navbar {
+  margin-top: 39px;
+}
+.navbarWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__link {
+  display: flex;
+  gap: 32px;
+  font-family: var(--Poppins);
+  font-size: 18px;
+  font-weight: 400;
+  color: #000000;
+}
+.nav__link a {
+  color: #000000;
+}
+.nav__link a:hover {
+  color: var(--secondary_text_color);
+}
+.navRight {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  position: relative;
+}
+.navRight__Btn {
+  display: flex;
+  gap: 24px;
+  width: 222px;
+  padding: 11px 0px;
+  border: none;
+  border-radius: 35px;
+  align-items: center;
+  font-family: var(--Poppins);
+  font-size: 12px;
+  font-weight: 400;
+  background-color: var(--btn_background_color);
+  color: var(--btn_text_color);
+}
+.navRight__img {
+  width: 24px;
+  height: 24px;
+  margin-left: 12px;
+}
+.navRight__cart {
+  width: 32px;
+  height: 32px;
+  margin-right: 235px;
+}
+.navRight__cartDot {
+  position: absolute;
+  top: 8px;
+  right: 232px;
+}
+
+/* ============= navbar css end ================== */
